# cafe-themes

./: .build.yml  .travis.yml  AUTHORS  COPYING  Makefile.am  NEWS  autogen.sh  cafe-themes.pot  configure.ac  makepot  output_07347b3d5cdf0789bf7c06ef161db058a2d1269a  output_54afb4b8e509361f662d5abd9bee003ebfcc98ca  output_89ea30d03296fb7e8d13043f7401f27a86a22c56  output_a2091a7e46c04802965ba3b8310c5598b70d1091  output_ac77aabd46a224141ec89e35ee5d551a20d23e7a  output_da726cc117e74d4680a2dc78d5dcc6f7f0ec6fec
desktop-themes/: Makefile.am
desktop-themes/BigContrastInverse/: Makefile.am  index.theme.in
desktop-themes/BigContrastInverse/gtk-2.0/: Makefile.am  gtkrc.in
desktop-themes/BigContrastInverse/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/BigContrastInverse/pixmaps/: Makefile.am
desktop-themes/BlackCAFE/: Makefile.am  index.theme.in
desktop-themes/BlackCAFE-border/: Makefile.am
desktop-themes/BlackCAFE-border/metacity-1/: Makefile.am  metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
desktop-themes/BlackCAFE/apps/: Makefile.am
desktop-themes/BlackCAFE/cinnamon/: Makefile.am
desktop-themes/BlackCAFE/ctk-3.0/: Makefile.am  cafe-applications.css  ctk-dark.css  ctk-main-dark.css  ctk-main.css  ctk-widgets-assets-dark.css  ctk-widgets.css  ctk.css  gnome-applications.css  gtk-widgets.css  other-applications.css  settings.ini  unity.css  window-controls.css
desktop-themes/BlackCAFE/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/BlackCAFE/gtk-3.0/: Makefile.am  cafe-applications.css  gtk-main.css  gtk-widgets.css  settings.ini
desktop-themes/BlackCAFE/metacity-1/: Makefile.am  metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
desktop-themes/BlackCAFE/unity/: Makefile.am
desktop-themes/Blue-Submarine/: index.theme.in
desktop-themes/Blue-Submarine/gtk-2.0/: gtkrc
desktop-themes/Blue-Submarine/gtk-3.0/: Makefile.am  cafe-applications.css
desktop-themes/Blue-Undersea/: Makefile.am  index.theme.in
desktop-themes/Blue-Undersea-border/: Makefile.am
desktop-themes/Blue-Undersea-border/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/Blue-Undersea/cinnamon/: Makefile.am
desktop-themes/Blue-Undersea/ctk-3.0/: Makefile.am  cafe-applications.css  ctk-widgets-assets.css  ctk-widgets.css  ctk.css  gtk.css  menu.css  other-applications.css  scrollbar.css  settings.ini  sidebar.css
desktop-themes/Blue-Undersea/emerald/: Makefile.am
desktop-themes/Blue-Undersea/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/Blue-Undersea/gtk-3.0/: Makefile.am  cafe-applications.css  gtk-widgets.css  gtk.css  settings.ini
desktop-themes/Blue-Undersea/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/BlueMenta/: index.theme.in
desktop-themes/BlueMenta/gtk-2.0/: gtkrc
desktop-themes/BlueMenta/gtk-3.0/: Makefile.am  cafe-applications.css  gtk-main.css  gtk-widgets.css
desktop-themes/BlueMenta/metacity-1/: metacity-theme-2.xml
desktop-themes/BlueMint/: COPYING  Makefile.am  README  index.theme.in
desktop-themes/BlueMint-border/: Makefile.am
desktop-themes/BlueMint-border/metacity-1/: Makefile.am  metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
desktop-themes/BlueMint/cinnamon/: Makefile.am
desktop-themes/BlueMint/ctk-3.0/: Makefile.am  cafe-applications.css  ctk-main.css  ctk-widgets-assets.css  ctk-widgets.css  gtk-widgets.css  other-applications.css  settings.ini  window-controls.css
desktop-themes/BlueMint/emerald/: Makefile.am
desktop-themes/BlueMint/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/BlueMint/gtk-3.0/: cafe-applications.css  gtk-main.css  gtk-widgets.css  settings.ini
desktop-themes/BlueMint/metacity-1/: Makefile.am  metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
desktop-themes/BlueMint/unity/: Makefile.am
desktop-themes/BlueMint/xfwm4/: Makefile.am
desktop-themes/ClassicGreen/: Makefile.am  index.theme.in
desktop-themes/ClassicGreen/ctk-3.0/: Makefile.am  applications.css  cafe-applications.css  ctk-widgets-img.css  ctk-widgets.css  ctk.css  settings.ini
desktop-themes/ClassicGreen/gtk-2.0/: Makefile.am  applications.rc  gtkrc
desktop-themes/ClassicGreen/gtk-3.0/: Makefile.am  cafe-applications.css  gtk-widgets.css  gtk.css  settings.ini
desktop-themes/ClassicGreen/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/ClassicOk/: Makefile.am  index.theme.in
desktop-themes/ClassicOk/ctk-3.0/: Makefile.am  cafe-applications.css  ctk-widgets-img.css  ctk-widgets.css  ctk.css  other-applications.css  settings.ini
desktop-themes/ClassicOk/gtk-2.0/: Makefile.am  applications.rc  gtkrc
desktop-themes/ClassicOk/gtk-3.0/: Makefile.am  cafe-applications.css  gtk-widgets.css  gtk.css  settings.ini
desktop-themes/ClassicOk/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/ClassicOk/openbox-3/: Makefile.am
desktop-themes/ClassicOk/xfwm4/: Makefile.am
desktop-themes/ContrastBig/: Makefile.am  index.theme.in
desktop-themes/Green-Submarine/: index.theme.in
desktop-themes/Green-Submarine/gtk-2.0/: gtkrc
desktop-themes/Green-Submarine/gtk-3.0/: Makefile.am  cafe-applications.css  gtk.css
desktop-themes/Green-Undersea/: Makefile.am  index.theme.in
desktop-themes/Green-Undersea-border/: Makefile.am
desktop-themes/Green-Undersea-border/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/Green-Undersea/cinnamon/: Makefile.am
desktop-themes/Green-Undersea/ctk-3.0/: Makefile.am  cafe-applications.css  ctk-widgets.css  ctk.css  gtk-widgets.css  menu.css  other-applications.css  scrollbar.css  settings.ini  sidebar.css
desktop-themes/GreenLagoon/: Makefile.am  index.theme.in
desktop-themes/GreenLagoon-border/: Makefile.am
desktop-themes/GreenLaguna/: index.theme.in
desktop-themes/GreenLaguna-border/: COPYING
desktop-themes/HighContrastInverse/: index.theme.in
desktop-themes/Mint/: COPYING  Makefile.am  index.theme.in
desktop-themes/Mint-border/: Makefile.am  README
desktop-themes/TraditionalGreen/: COPYING  index.theme.in
desktop-themes/TraditionalOk/: index.theme.in
(+403 files in other folders)
