AC_PREREQ(2.53)

AC_INIT([cafe-themes], [1.25.0], [https://cafe-desktop.org])
AC_CONFIG_SRCDIR([icon-themes])

AM_INIT_AUTOMAKE([1.9 tar-ustar dist-xz no-dist-gzip check-news])

# Enable silent build rules by default, requires at least
# Automake-1.11. Disable by either passing --disable-silent-rules to
# configure or passing V=1 to make
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

PKG_PROG_PKG_CONFIG([0.19])
AM_GNU_GETTEXT_VERSION([0.19.8])
AM_GNU_GETTEXT([external])

# Workaround to make aclocal get the right flags
AC_SUBST(ACLOCAL_AMFLAGS, "\${ACLOCAL_FLAGS}")

# Check GTK+ theme engines
PKG_CHECK_MODULES(THEME_ENGINE,
 [gtk+-2.0 >= 2.0.0 dnl
  gdk-pixbuf-2.0 >= 2.0.0 ])

AC_CONFIG_FILES([
Makefile
cursor-themes/Makefile
cursor-themes/cafe-white/Makefile
cursor-themes/cafe-white/cursors/Makefile
cursor-themes/cafe-black/Makefile
cursor-themes/cafe-black/cursors/Makefile
desktop-themes/Makefile
desktop-themes/BlackCAFE/Makefile
desktop-themes/BlackCAFE/apps/Makefile
desktop-themes/BlackCAFE/gtk-2.0/Makefile
desktop-themes/BlackCAFE/gtk-2.0/assets/Makefile
desktop-themes/BlackCAFE/gtk-2.0/Styles/Makefile
desktop-themes/BlackCAFE/gtk-3.0/Makefile
desktop-themes/BlackCAFE/gtk-3.0/assets/Makefile
desktop-themes/BlackCAFE/gtk-3.0/window-controls/Makefile
desktop-themes/BlackCAFE/ctk-3.0/Makefile
desktop-themes/BlackCAFE/ctk-3.0/assets/Makefile
desktop-themes/BlackCAFE/ctk-3.0/window-controls/Makefile
desktop-themes/BlackCAFE/metacity-1/Makefile
desktop-themes/BlackCAFE/cinnamon/Makefile
desktop-themes/BlackCAFE/unity/Makefile
desktop-themes/BlackCAFE-border/Makefile
desktop-themes/BlackCAFE-border/metacity-1/Makefile
desktop-themes/BlueMint/Makefile
desktop-themes/BlueMint/cinnamon/Makefile
desktop-themes/BlueMint/emerald/Makefile
desktop-themes/BlueMint/gtk-2.0/Makefile
desktop-themes/BlueMint/gtk-2.0/apps/Makefile
desktop-themes/BlueMint/gtk-2.0/apps/Caja/Makefile
desktop-themes/BlueMint/gtk-2.0/apps/Handles/Makefile
desktop-themes/BlueMint/gtk-2.0/apps/Null/Makefile
desktop-themes/BlueMint/gtk-2.0/apps/Others/Makefile
desktop-themes/BlueMint/gtk-2.0/widgets/Makefile
desktop-themes/BlueMint/gtk-2.0/widgets/Null/Makefile
desktop-themes/BlueMint/gtk-2.0/widgets/Others/Makefile
desktop-themes/BlueMint/gtk-2.0/widgets/Panel/Makefile
desktop-themes/BlueMint/gtk-2.0/widgets/Scale/Makefile
desktop-themes/BlueMint/gtk-3.0/Makefile
desktop-themes/BlueMint/gtk-3.0/assets/Makefile
desktop-themes/BlueMint/gtk-3.0/borders/Makefile
desktop-themes/BlueMint/gtk-3.0/window-controls/Makefile
desktop-themes/BlueMint/ctk-3.0/Makefile
desktop-themes/BlueMint/ctk-3.0/assets/Makefile
desktop-themes/BlueMint/ctk-3.0/borders/Makefile
desktop-themes/BlueMint/ctk-3.0/window-controls/Makefile
desktop-themes/BlueMint/metacity-1/Makefile
desktop-themes/BlueMint/unity/Makefile
desktop-themes/BlueMint/xfwm4/Makefile
desktop-themes/BlueMint-border/Makefile
desktop-themes/BlueMint-border/metacity-1/Makefile
desktop-themes/Blue-Undersea/Makefile
desktop-themes/Blue-Undersea/cinnamon/Makefile
desktop-themes/Blue-Undersea/emerald/Makefile
desktop-themes/Blue-Undersea/gtk-2.0/Makefile
desktop-themes/Blue-Undersea/gtk-2.0/apps/Makefile
desktop-themes/Blue-Undersea/gtk-2.0/apps/Handles/Makefile
desktop-themes/Blue-Undersea/gtk-2.0/apps/Panel/Makefile
desktop-themes/Blue-Undersea/gtk-2.0/assets/Makefile
desktop-themes/Blue-Undersea/gtk-3.0/Makefile
desktop-themes/Blue-Undersea/gtk-3.0/assets/Makefile
desktop-themes/Blue-Undersea/ctk-3.0/Makefile
desktop-themes/Blue-Undersea/ctk-3.0/assets/Makefile
desktop-themes/Blue-Undersea/metacity-1/Makefile
desktop-themes/Blue-Undersea-border/Makefile
desktop-themes/Blue-Undersea-border/metacity-1/Makefile
desktop-themes/ContrastBig/Makefile
desktop-themes/GreenLagoon/Makefile
desktop-themes/GreenLagoon/gtk-2.0/Makefile
desktop-themes/GreenLagoon/gtk-2.0/Styles/Makefile
desktop-themes/GreenLagoon/gtk-3.0/Makefile
desktop-themes/GreenLagoon/gtk-3.0/assets/Makefile
desktop-themes/GreenLagoon/gtk-3.0/window-controls/Makefile
desktop-themes/GreenLagoon/ctk-3.0/Makefile
desktop-themes/GreenLagoon/ctk-3.0/assets/Makefile
desktop-themes/GreenLagoon/ctk-3.0/window-controls/Makefile
desktop-themes/GreenLagoon/metacity-1/Makefile
desktop-themes/GreenLagoon/unity/Makefile
desktop-themes/GreenLagoon-border/Makefile
desktop-themes/GreenLagoon-border/metacity-1/Makefile
desktop-themes/Green-Undersea/Makefile
desktop-themes/Green-Undersea/cinnamon/Makefile
desktop-themes/Green-Undersea/emerald/Makefile
desktop-themes/Green-Undersea/gtk-2.0/Makefile
desktop-themes/Green-Undersea/gtk-2.0/apps/Makefile
desktop-themes/Green-Undersea/gtk-2.0/apps/Handles/Makefile
desktop-themes/Green-Undersea/gtk-2.0/apps/Panel/Makefile
desktop-themes/Green-Undersea/gtk-2.0/assets/Makefile
desktop-themes/Green-Undersea/gtk-3.0/Makefile
desktop-themes/Green-Undersea/gtk-3.0/assets/Makefile
desktop-themes/Green-Undersea/ctk-3.0/Makefile
desktop-themes/Green-Undersea/ctk-3.0/assets/Makefile
desktop-themes/Green-Undersea/metacity-1/Makefile
desktop-themes/Green-Undersea-border/Makefile
desktop-themes/Green-Undersea-border/metacity-1/Makefile
desktop-themes/BigContrastInverse/Makefile
desktop-themes/BigContrastInverse/gtk-2.0/Makefile
desktop-themes/BigContrastInverse/gtk-2.0/gtkrc
desktop-themes/BigContrastInverse/metacity-1/Makefile
desktop-themes/BigContrastInverse/pixmaps/Makefile
desktop-themes/Mint/Makefile
desktop-themes/Mint/cinnamon/Makefile
desktop-themes/Mint/emerald/Makefile
desktop-themes/Mint/gtk-2.0/Makefile
desktop-themes/Mint/gtk-2.0/apps/Makefile
desktop-themes/Mint/gtk-2.0/apps/Caja/Makefile
desktop-themes/Mint/gtk-2.0/apps/Handles/Makefile
desktop-themes/Mint/gtk-2.0/apps/Null/Makefile
desktop-themes/Mint/gtk-2.0/apps/Others/Makefile
desktop-themes/Mint/gtk-2.0/widgets/Makefile
desktop-themes/Mint/gtk-2.0/widgets/Null/Makefile
desktop-themes/Mint/gtk-2.0/widgets/Others/Makefile
desktop-themes/Mint/gtk-2.0/widgets/Panel/Makefile
desktop-themes/Mint/gtk-2.0/widgets/Scale/Makefile
desktop-themes/Mint/gtk-3.0/Makefile
desktop-themes/Mint/gtk-3.0/assets/Makefile
desktop-themes/Mint/gtk-3.0/borders/Makefile
desktop-themes/Mint/gtk-3.0/window-controls/Makefile
desktop-themes/Mint/ctk-3.0/Makefile
desktop-themes/Mint/ctk-3.0/assets/Makefile
desktop-themes/Mint/ctk-3.0/borders/Makefile
desktop-themes/Mint/ctk-3.0/window-controls/Makefile
desktop-themes/Mint/metacity-1/Makefile
desktop-themes/Mint/unity/Makefile
desktop-themes/Mint/xfwm4/Makefile
desktop-themes/Mint-border/Makefile
desktop-themes/Mint-border/metacity-1/Makefile
desktop-themes/ClassicGreen/Makefile
desktop-themes/ClassicGreen/gtk-2.0/Makefile
desktop-themes/ClassicGreen/gtk-3.0/Makefile
desktop-themes/ClassicGreen/gtk-3.0/img/Makefile
desktop-themes/ClassicGreen/ctk-3.0/Makefile
desktop-themes/ClassicGreen/ctk-3.0/img/Makefile
desktop-themes/ClassicGreen/metacity-1/Makefile
desktop-themes/ClassicOk/Makefile
desktop-themes/ClassicOk/gtk-2.0/Makefile
desktop-themes/ClassicOk/gtk-3.0/Makefile
desktop-themes/ClassicOk/gtk-3.0/img/Makefile
desktop-themes/ClassicOk/ctk-3.0/Makefile
desktop-themes/ClassicOk/ctk-3.0/img/Makefile
desktop-themes/ClassicOk/metacity-1/Makefile
desktop-themes/ClassicOk/openbox-3/Makefile
desktop-themes/ClassicOk/xfwm4/Makefile
desktop-themes/ClassicOk/xfwm4/png/Makefile
marco-themes/Makefile
icon-themes/Makefile
icon-themes/ContrastBig/Makefile
icon-themes/ContrastBig/16x16/Makefile
icon-themes/ContrastBig/16x16/actions/Makefile
icon-themes/ContrastBig/16x16/apps/Makefile
icon-themes/ContrastBig/16x16/categories/Makefile
icon-themes/ContrastBig/16x16/devices/Makefile
icon-themes/ContrastBig/16x16/emblems/Makefile
icon-themes/ContrastBig/16x16/emotes/Makefile
icon-themes/ContrastBig/16x16/mimetypes/Makefile
icon-themes/ContrastBig/16x16/places/Makefile
icon-themes/ContrastBig/16x16/status/Makefile
icon-themes/ContrastBig/16x16/stock/Makefile
icon-themes/ContrastBig/22x22/Makefile
icon-themes/ContrastBig/22x22/actions/Makefile
icon-themes/ContrastBig/22x22/apps/Makefile
icon-themes/ContrastBig/22x22/categories/Makefile
icon-themes/ContrastBig/22x22/devices/Makefile
icon-themes/ContrastBig/22x22/emblems/Makefile
icon-themes/ContrastBig/22x22/emotes/Makefile
icon-themes/ContrastBig/22x22/mimetypes/Makefile
icon-themes/ContrastBig/22x22/places/Makefile
icon-themes/ContrastBig/22x22/status/Makefile
icon-themes/ContrastBig/22x22/stock/Makefile
icon-themes/ContrastBig/24x24/Makefile
icon-themes/ContrastBig/24x24/actions/Makefile
icon-themes/ContrastBig/24x24/apps/Makefile
icon-themes/ContrastBig/24x24/categories/Makefile
icon-themes/ContrastBig/24x24/devices/Makefile
icon-themes/ContrastBig/24x24/emblems/Makefile
icon-themes/ContrastBig/24x24/emotes/Makefile
icon-themes/ContrastBig/24x24/mimetypes/Makefile
icon-themes/ContrastBig/24x24/places/Makefile
icon-themes/ContrastBig/24x24/status/Makefile
icon-themes/ContrastBig/24x24/stock/Makefile
icon-themes/ContrastBig/32x32/Makefile
icon-themes/ContrastBig/32x32/actions/Makefile
icon-themes/ContrastBig/32x32/apps/Makefile
icon-themes/ContrastBig/32x32/categories/Makefile
icon-themes/ContrastBig/32x32/devices/Makefile
icon-themes/ContrastBig/32x32/emblems/Makefile
icon-themes/ContrastBig/32x32/emotes/Makefile
icon-themes/ContrastBig/32x32/mimetypes/Makefile
icon-themes/ContrastBig/32x32/places/Makefile
icon-themes/ContrastBig/32x32/status/Makefile
icon-themes/ContrastBig/32x32/stock/Makefile
icon-themes/ContrastBig/48x48/Makefile
icon-themes/ContrastBig/48x48/actions/Makefile
icon-themes/ContrastBig/48x48/animations/Makefile
icon-themes/ContrastBig/48x48/apps/Makefile
icon-themes/ContrastBig/48x48/categories/Makefile
icon-themes/ContrastBig/48x48/devices/Makefile
icon-themes/ContrastBig/48x48/emblems/Makefile
icon-themes/ContrastBig/48x48/emotes/Makefile
icon-themes/ContrastBig/48x48/mimetypes/Makefile
icon-themes/ContrastBig/48x48/places/Makefile
icon-themes/ContrastBig/48x48/status/Makefile
icon-themes/ContrastBig/48x48/stock/Makefile
icon-themes/ContrastBig/256x256/Makefile
icon-themes/ContrastBig/256x256/actions/Makefile
icon-themes/ContrastBig/256x256/apps/Makefile
icon-themes/ContrastBig/256x256/categories/Makefile
icon-themes/ContrastBig/256x256/devices/Makefile
icon-themes/ContrastBig/256x256/emblems/Makefile
icon-themes/ContrastBig/256x256/emotes/Makefile
icon-themes/ContrastBig/256x256/mimetypes/Makefile
icon-themes/ContrastBig/256x256/places/Makefile
icon-themes/ContrastBig/256x256/status/Makefile
icon-themes/ContrastBig/256x256/stock/Makefile
icon-themes/ContrastBig/scalable/Makefile
icon-themes/ContrastBig/scalable/actions/Makefile
icon-themes/ContrastBig/scalable/actions-extra/Makefile
icon-themes/ContrastBig/scalable/apps/Makefile
icon-themes/ContrastBig/scalable/apps-extra/Makefile
icon-themes/ContrastBig/scalable/categories/Makefile
icon-themes/ContrastBig/scalable/devices/Makefile
icon-themes/ContrastBig/scalable/emblems/Makefile
icon-themes/ContrastBig/scalable/mimetypes/Makefile
icon-themes/ContrastBig/scalable/places/Makefile
icon-themes/ContrastBig/scalable/places-extra/Makefile
icon-themes/ContrastBig/scalable/status/Makefile
icon-themes/ContrastBig/scalable/status-extra/Makefile
po/Makefile.in
])

AC_OUTPUT

dnl ==========================================================================
echo "
cafe-themes-$VERSION:

	Installation prefix:	${prefix}

"
