SUBDIRS = \
	BlackCAFE \
	BlackCAFE-border \
	BlueMenta \
	BlueMenta-border \
	Blue-Submarine \
	Blue-Submarine-border \
	ContrastBig \
	GreenLaguna \
	GreenLaguna-border \
	Green-Submarine \
	Green-Submarine-border \
	HighContrastInverse \
	Menta \
	Menta-border \
	TraditionalGreen \
	TraditionalOk

