THEME_NAME=BlackCAFE

themedir = $(datadir)/themes/$(THEME_NAME)/ctk-3.0

theme_DATA = \
	gnome-applications.css \
	ctk.css \
	ctk-dark.css \
	ctk-main.css \
	ctk-main-dark.css \
	ctk-widgets.css \
	ctk-widgets-assets-dark.css \
	cafe-applications.css \
	other-applications.css \
	settings.ini \
	unity.css \
	window-controls.css

EXTRA_DIST = $(theme_DATA)

SUBDIRS = assets \
	window-controls
