themedir = $(datadir)/themes/BlueMint/gtk-3.0

theme_DATA = \
	gnome-applications.css \
	gtk.css \
	gtk-fallback.css \
	gtk-main-common.css \
	gtk-main.css \
	gtk-widgets-assets.css \
	gtk-widgets-backgrounds.css \
	gtk-widgets-borders.css \
	gtk-widgets.css \
	cafe-applications.css \
	other-applications.css \
	settings.ini \
	unity.css \
	window-controls.css

EXTRA_DIST = $(theme_DATA)

SUBDIRS = \
	assets \
	borders \
	window-controls
