themedir = $(datadir)/themes/Green-Undersea/ctk-3.0

theme_DATA = \
	gnome-applications.css \
	ctk.css \
	ctk-widgets-assets.css \
	ctk-widgets.css \
	cafe-applications.css \
	menu.css \
	other-applications.css \
	scrollbar.css \
	settings.ini \
	sidebar.css

EXTRA_DIST = $(theme_DATA)

SUBDIRS = assets

DIST_SUBDIRS = assets
