THEME_NAME=GreenLagoon

themedir = $(datadir)/themes/$(THEME_NAME)/gtk-3.0

theme_DATA = \
	gnome-applications.css \
	gtk.css \
	gtk-main.css \
	gtk-widgets.css \
	gtk-widgets-assets.css \
	cafe-applications.css \
	other-applications.css \
	settings.ini \
	unity.css \
	window-controls.css

EXTRA_DIST = $(theme_DATA)

SUBDIRS = assets \
	window-controls

