themedir = $(datadir)/themes/Mint/ctk-3.0

theme_DATA = \
	gnome-applications.css \
	cafe-applications.css \
	ctk.css \
	ctk-fallback.css \
	ctk-main.css \
	ctk-main-common.css \
	ctk-widgets.css \
	ctk-widgets-assets.css \
	ctk-widgets-backgrounds.css \
	ctk-widgets-borders.css \
	other-applications.css \
	settings.ini \
	unity.css \
	window-controls.css

EXTRA_DIST = $(theme_DATA)

SUBDIRS = \
	assets \
	borders \
	window-controls
