NULL=

themedir = $(datadir)/icons/ContrastBig
size = 22x22
context = emblems

icondir = $(themedir)/$(size)/$(context)

icon_DATA= \
	emblem-default.png \
	emblem-documents.png \
	emblem-favorite.png \
	emblem-important.png \
	emblem-music.png \
	emblem-ok.png \
	emblem-photos.png \
	emblem-shared.png \
	emblem-synchronizing.png \
	emblem-system.png \
	emblem-videos.png

EXTRA_DIST=	$(icon_DATA) 
